# dns-switcher

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD  PKGBUILD-git  dns-switcher-0.2.2-1-x86_64.pkg.tar.zst  dns-switcher-debug-0.2.2-1-x86_64.pkg.tar.zst
src/: app.rs  config.rs  main.rs  ui.rs
src/dns/: manager.rs  mod.rs  providers.rs  speed.rs
