[package]
name = "dns-switcher"
version = "0.2.1"
edition = "2021"
description = "TUI app for real-time DNS switching on Linux"
authors = ["IovAnto <iovine.antonio44@gmail.com>"]
license = "MIT"
repository = "https://github.com/IovAnto/dns-switcher"
homepage = "https://github.com/IovAnto/dns-switcher"
readme = "README.md"
keywords = ["dns", "tui", "iwd", "linux", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Asynchronous operations
tokio = { version = "1", features = ["full"] }

# Serializzazione (per salvare config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilità
dirs = "5"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
